--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "reactpresentation",
   "version": "0.0.0",
   "type": "module",
+  "license": "MIT",
   "files": [
     "dist"
   ],
@@ -11,7 +12,8 @@
     ".": {
       "import": "./dist/reactpresentation.js",
       "require": "./dist/reactpresentation.umd.cjs"
-    }
+    },
+    "./dist/style.css": "./dist/style.css"
   },
   "scripts": {
     "dev": "vite",
@@ -32,6 +34,7 @@
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
+    "postcss-load-config": "^4.0.1",
     "prettier": "^2.8.6",
     "sass": "^1.59.3",
     "typescript": "^4.9.3",
