--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactpresentation",
+  "name": "@nkmwicz/reactpresentation",
   "version": "1.0.0",
   "type": "module",
   "license": "MIT",
